--- a/package.json
+++ b/package.json
@@ -12,22 +12,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.0",
-    "@angular/common": "^5.2.0",
-    "@angular/compiler": "^5.2.0",
-    "@angular/core": "^5.2.0",
-    "@angular/forms": "^5.2.0",
-    "@angular/http": "^5.2.0",
-    "@angular/platform-browser": "^5.2.0",
-    "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/router": "^5.2.0",
-    "bootstrap": "^4.0.0-beta.3",
-    "core-js": "^2.4.1",
-    "jquery": "^3.2.1",
+    "@angular/animations": "^5.2.10",
+    "@angular/common": "^5.2.10",
+    "@angular/compiler": "^5.2.10",
+    "@angular/core": "^5.2.10",
+    "@angular/forms": "^5.2.10",
+    "@angular/http": "^5.2.10",
+    "@angular/platform-browser": "^5.2.10",
+    "@angular/platform-browser-dynamic": "^5.2.10",
+    "@angular/router": "^5.2.10",
+    "bootstrap": "^4.1.0",
+    "core-js": "^2.5.5",
+    "hoek": "^5.0.3",
+    "jquery": "^3.3.1",
     "jquery-dotdotdot": "^1.8.2",
-    "rxjs": "^5.5.2",
-    "tinymce": "^4.7.4",
-    "zone.js": "^0.8.20"
+    "package-lock.json": "^1.0.0",
+    "rxjs": "^5.5.10",
+    "tinymce": "^4.7.11",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular/cli": "1.6.3",
